--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,12 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+
     // ML Kit
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta1'
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
