--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.sams3p10l.diplomski"
         minSdkVersion 27
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -56,11 +56,17 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
-    //Firebase
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
 
     // ML Kit
     implementation 'com.google.mlkit:text-recognition:16.0.0-beta1'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
+
+    // Camera X
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha09"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha09"
+    implementation "androidx.camera:camera-view:1.0.0-alpha29"
 }
 
 apply plugin: 'com.android.application'
