--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sams3p10l.diplomski">
 
+    <uses-feature android:name="android.hardware.camera.any"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:name=".DiplApp"
         android:allowBackup="false"
@@ -18,7 +21,8 @@
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
