--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.1.0-alpha09"
     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha09"
     implementation "androidx.camera:camera-view:1.0.0-alpha29"
+
+    implementation 'org.apache.commons:commons-text:1.9'
 }
 
 apply plugin: 'com.android.application'
