--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category
+                    android:name="com.google.android.glass.category.DIRECTORY" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.fragment.ContainerActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape"/>
 
     </application>
 
